# meegram2

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  meegram.pro  meegram2.pro
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
cmake/: dependencies.cmake  qr_code_generator.cmake
debian/: README  changelog  control  meegram.aegis  rules
lib/: libs.pri  nlohmann.pri  warnings.pri
qtc_packaging/debian_harmattan/: README  changelog  control  copyright  manifest.aegis  rules
resources/: emoji_0.qrc  emoji_1.qrc  emoji_2.qrc  emoji_3.qrc  emoji_4.qrc  emoji_5.qrc  emoji_6.qrc  fonts.qrc  i18n.qrc  icons.qrc  images.qrc  meegram2.desktop  meegram_harmattan.desktop  qml.qrc  resources.qrc  tgs.qrc
resources/i18n/: meegram_en.qm  meegram_en.ts
resources/qml/: ArchivedChatPage.qml  AuthenticationPage.qml  ChatListView.qml  ChatPage.qml  ChatsPage.qml  CodeEnterPage.qml  ContactInfoPage.qml  IntroPage.qml  LanguageSettingsPage.qml  MainPage.qml  MessagePage.qml  PasswordPage.qml  QrCodePage.qml  SettingsPage.qml  SignInPage.qml  SignUpPage.qml  UIStyles.qml  UserPage.qml  main.qml
resources/qml/components/: AboutDialog.qml  ChatItem.qml  CountryPickerDialog.qml  CustomBubble.qml  DrillDownDelegate.qml  FormattedText.qml  Icons.qml  ListDelegate.qml  ListItem.qml  MessageBubble.qml  MessageDelegate.qml  MyCountBubble.qml  MyLabel.qml  Ripple.qml  ServiceMessageDelegate.qml  SettingsSwitch.qml  TextBubble.qml  TopBar.qml  UIConstants.js
resources/tgs/: Newborn.tgs
src/: .clang-format  AppManager.cpp  AppManager.hpp  Application.cpp  Application.hpp  Authorization.cpp  Authorization.hpp  BasicGroup.cpp  BasicGroup.hpp  BasicGroupFullInfo.cpp  BasicGroupFullInfo.hpp  Canvas.cpp  Canvas.hpp  CanvasTimer.cpp  CanvasTimer.hpp  Chat.cpp  Chat.hpp  ChatFolderInfo.cpp  ChatFolderInfo.hpp  ChatFolderModel.cpp  ChatFolderModel.hpp  ChatList.cpp  ChatList.hpp  ChatManager.cpp  ChatManager.hpp  ChatModel.cpp  ChatModel.hpp  ChatPhotoProvider.cpp  ChatPhotoProvider.hpp  ChatPosition.cpp  ChatPosition.hpp  Client.cpp  Client.hpp  Common.hpp  Context2D.cpp  Context2D.hpp  CountryModel.cpp  CountryModel.hpp  DBusAdaptor.cpp  DBusAdaptor.hpp  (+67 more)
tools/: rlottie-harmattan.patch  setup-dependencies.sh  tdlib-build.sh  toolchain.cmake
